--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -2,5 +2,6 @@ fixtures:
     repositories:
         stdlib: "https://github.com/puppetlabs/puppetlabs-stdlib.git"
         concat: "https://github.com/puppetlabs/puppetlabs-concat.git"
+        rvm: "https://github.com/maestrodev/puppet-rvm.git"
     symlinks:
         lita: "../../../"
